# cisp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  preprocess.zsh
include/: cisp.h
include/cisp/: batch_setf.h  batch_unsetf.h  defclass.h  getf.h  setf.h  unsetf.h
include/cisp/detail/: base_tokens.h  config.h  field.h  token.h  type.h
test/: batch_setf.c  batch_unsetf.c  defclass.c  getf.c  setf.c  unsetf.c
test/detail/: field.c  token.c  type.c
tools/: cisp.py
